# firecore_torch

./: .gitignore  firecore  pyproject.toml  run.py
.github/workflows/: python-package.yml
examples/mnist/: __main__.py  config.jsonnet  config.py  config_v2.jsonnet  config_v3.jsonnet  data.py  utils.py
firecore_torch/: batch_processor.py  constants.py
firecore_torch/arguments/: __init__.py  _deepspeed.py
firecore_torch/datasets/: fake.py
firecore_torch/helpers/: __init__.py  _rank_zero.py  arguments.py  data.py  distributed.py  lr_scheduler.py  meter.py  metric_history.py  model.py  optimizer.py  progress.py  tensor.py
firecore_torch/hooks/: __init__.py  base.py  checkpoint.py  deepspeed_hooks.py  deepspeed_training.py  eta_hook.py  inference.py  tensorboard.py  text.py  training.py
firecore_torch/metrics/: __init__.py  accuracy.py  average.py  base.py  collection.py  functional.py  sample_counter.py  speed.py
firecore_torch/modules/: base.py  loss.py  wrapper.py
firecore_torch/runners/: __init__.py  base.py  basic.py  batch_processor.py  context.py  epoch_based.py  epoch_based_v2.py  epoch_based_v3.py  evaluator.py  trainer.py
firecore_torch/testing/: distributed.py
firecore_torch/workflow/: base.py  basic.py  evaluator.py  trainer.py
tests/datasets/: test_fake.py
tests/metrics/: test_functional.py  test_metrics.py
