[tool.poetry]
name = "firecore-torch"
version = "0.1.0"
description = ""
authors = ["SunDoge <384813529@qq.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "firecore_torch" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
firecore = ">=0.6"
typed-args = "^0.6.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
